<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/picture"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_no_location" />


        <ImageView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/picture"
            app:srcCompat="@drawable/ic_sky" />

        <ImageView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/picture"
            app:srcCompat="@drawable/ic_sky" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aref"
        android:gravity="center"
        android:text="@string/whops"
        android:textColor="@color/gray"
        android:textSize="@dimen/_50ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/no_location_saved"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        app:backgroundTint="@color/orange"
        app:srcCompat="@drawable/ic_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/permission"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/aref"
        android:textColor="@color/white"
        android:text="Active Permission"
        android:textSize="@dimen/_8ssp"
        app:backgroundTint="@color/orange"
        app:cornerRadius="@dimen/_3sdp" />

</LinearLayout>