<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/nav_items"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:textColor="@color/white"
        android:text="@string/settings"
        android:background="@color/nav_header"
        android:fontFamily="@font/aref"
        android:textSize="@dimen/_25ssp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

       <com.google.android.material.card.MaterialCardView
           android:id="@+id/home"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_40sdp"
           app:cardBackgroundColor="@color/nav_header"
           android:layout_marginStart="@dimen/_15sdp"
           android:layout_marginEnd="@dimen/_15sdp"
           android:layout_marginBottom="@dimen/_10sdp"
           app:cardCornerRadius="@dimen/_5sdp"
           app:strokeColor="@color/black"
           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/_30sdp"
               android:orientation="horizontal"
                android:gravity="center_vertical"
               android:layout_gravity="center_vertical"
               android:padding="@dimen/_5sdp"
               >
               <ImageView
                   android:layout_width="@dimen/_20sdp"
                   android:layout_height="@dimen/_20sdp"
                   app:srcCompat="@drawable/ic_home"
                   android:layout_marginStart="@dimen/_5sdp"
                   />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:textColor="@color/white"
                   android:text="@string/Home"
                   android:textSize="@dimen/_10ssp"
                   android:fontFamily="@font/roboto"
                   android:layout_marginStart="@dimen/_20sdp"
                   />
           </LinearLayout>
       </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="@color/nav_header"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:strokeColor="@color/black"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_manage_location"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:text="@string/manage_location"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="@dimen/_20sdp"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/auto_change_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="@color/nav_header"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:strokeColor="@color/black"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_photo"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:text="@string/auto_change_background"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="@dimen/_20sdp"
                    />
                <Switch
                    android:id="@+id/auto_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="@color/nav_header"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:strokeColor="@color/black"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_status"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:text="@string/Status_Bar"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="@dimen/_20sdp"
                    />
                <Switch
                    android:id="@+id/auto_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/radar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="@color/nav_header"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:strokeColor="@color/black"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_radar"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:text="@string/radar"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="@dimen/_20sdp"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/unit_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="@color/nav_header"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:strokeColor="@color/black"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_radar"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:text="@string/Unit_Setting"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="@dimen/_20sdp"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>





</LinearLayout>